# rules_android_error_demo

./: .bazelrc  MODULE.bazel  README.md
java/com/bdl/demo/rules_android/: AndroidManifest.xml  BUILD  Dummy.java
