module(
    name = "demo_rules_android_issue",
    compatibility_level = 0,
    version = "0.0.1",
)


bazel_dep(name = "rules_java", version = "7.4.0")
bazel_dep(name = "bazel_skylib", version = "1.3.0")

bazel_dep(
    name = "rules_android",
    version = "0.2.0",
    repo_name="rules_android",
)

# Or a later commit
RULES_ANDROID_COMMIT = "ad521ab589cab396096e6fe921c78fbeba20d314"
git_override(
    module_name = "rules_android",
    remote = "https://github.com/bazelbuild/rules_android",
    commit = RULES_ANDROID_COMMIT,
)

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)